// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lobby Empty Render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bqyKva jIjuOx"
      >
        <div
          class="sc-kstrdz hxmCxE"
        >
          <header
            class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-appBar-1 MuiPaper-elevation4"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-2 MuiToolbar-gutters"
            >
              <span
                class="sc-bdfBwQ dYepCs"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root makeStyles-icon-3"
                  focusable="false"
                  title=""
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"
                  />
                </svg>
                <h2
                  class="sc-gsTCUz"
                >
                  Options
                </h2>
              </span>
            </div>
          </header>
          <div
            class="sc-fFubgz ghXXhE"
          >
            <div
              class="sc-bkzZxe crFZJA"
            >
              <div
                class="sc-fodVxV bTNXAg"
                font-weight="bold"
                width="200px"
              >
                Keeped Pieces
              </div>
              <div
                class="sc-fodVxV kNAxDT"
              >
                <span
                  class="MuiSwitch-root"
                >
                  <span
                    aria-disabled="true"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-disabled-6 Mui-disabled Mui-disabled Mui-disabled"
                    tabindex="-1"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-7 MuiSwitch-input"
                        disabled=""
                        type="checkbox"
                        value=""
                      />
                      <span
                        class="MuiSwitch-thumb"
                      />
                    </span>
                  </span>
                  <span
                    class="MuiSwitch-track"
                  />
                </span>
              </div>
            </div>
            <div
              class="sc-bkzZxe crFZJA"
            >
              <div
                class="sc-fodVxV bTNXAg"
                font-weight="bold"
                width="200px"
              >
                Invisibility
              </div>
              <div
                class="sc-fodVxV kNAxDT"
              >
                <span
                  class="MuiSwitch-root"
                >
                  <span
                    aria-disabled="true"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-disabled-6 Mui-disabled Mui-disabled Mui-disabled"
                    tabindex="-1"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-7 MuiSwitch-input"
                        disabled=""
                        type="checkbox"
                        value=""
                      />
                      <span
                        class="MuiSwitch-thumb"
                      />
                    </span>
                  </span>
                  <span
                    class="MuiSwitch-track"
                  />
                </span>
              </div>
            </div>
            <div
              class="sc-bkzZxe crFZJA"
            >
              <div
                class="sc-fodVxV bTNXAg"
                font-weight="bold"
                width="200px"
              >
                Gravity
              </div>
              <div
                class="sc-fodVxV kNAxDT"
              >
                <span
                  class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider-8 Mui-disabled"
                >
                  <span
                    class="MuiSlider-rail"
                  />
                  <span
                    class="MuiSlider-track"
                    style="left: 0%; width: 0%;"
                  />
                  <input
                    type="hidden"
                    value="0.5"
                  />
                  <span
                    class="MuiSlider-mark MuiSlider-markActive"
                    data-index="0"
                    style="left: 0%;"
                  />
                  <span
                    class="MuiSlider-mark"
                    data-index="1"
                    style="left: 33.333333333333336%;"
                  />
                  <span
                    class="MuiSlider-mark"
                    data-index="2"
                    style="left: 66.66666666666667%;"
                  />
                  <span
                    class="MuiSlider-mark"
                    data-index="3"
                    style="left: 100%;"
                  />
                  <span
                    aria-orientation="horizontal"
                    aria-valuemax="2"
                    aria-valuemin="0.5"
                    aria-valuenow="0.5"
                    class="MuiSlider-thumb MuiSlider-thumbColorPrimary Mui-disabled PrivateValueLabel-thumb-9"
                    data-index="0"
                    role="slider"
                    style="left: 0%;"
                  >
                    <span
                      class="PrivateValueLabel-offset-11 MuiSlider-valueLabel"
                    >
                      <span
                        class="PrivateValueLabel-circle-12"
                      >
                        <span
                          class="PrivateValueLabel-label-13"
                        >
                          0.5
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="sc-bkzZxe crFZJA"
            >
              <div
                class="sc-fodVxV bTNXAg"
                font-weight="bold"
                width="200px"
              >
                Max Number of Players
              </div>
              <div
                class="sc-fodVxV kNAxDT"
              >
                <span
                  class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider-14 Mui-disabled"
                >
                  <span
                    class="MuiSlider-rail"
                  />
                  <span
                    class="MuiSlider-track"
                    style="left: 0%; width: 0%;"
                  />
                  <input
                    type="hidden"
                    value="1"
                  />
                  <span
                    class="MuiSlider-mark MuiSlider-markActive"
                    data-index="0"
                    style="left: 0%;"
                  />
                  <span
                    class="MuiSlider-mark"
                    data-index="1"
                    style="left: 33.333333333333336%;"
                  />
                  <span
                    class="MuiSlider-mark"
                    data-index="2"
                    style="left: 66.66666666666667%;"
                  />
                  <span
                    class="MuiSlider-mark"
                    data-index="3"
                    style="left: 100%;"
                  />
                  <span
                    aria-orientation="horizontal"
                    aria-valuemax="4"
                    aria-valuemin="1"
                    aria-valuenow="1"
                    class="MuiSlider-thumb MuiSlider-thumbColorPrimary Mui-disabled PrivateValueLabel-thumb-9"
                    data-index="0"
                    role="slider"
                    style="left: 0%;"
                  >
                    <span
                      class="PrivateValueLabel-offset-11 MuiSlider-valueLabel"
                    >
                      <span
                        class="PrivateValueLabel-circle-12"
                      >
                        <span
                          class="PrivateValueLabel-label-13"
                        >
                          1
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-hBEYos iGMYou"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-15"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Leave
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-16 Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Start
              </span>
            </button>
          </div>
        </div>
        <div
          class="sc-kstrdz hxmCxE"
        >
          <header
            class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-appBar-17 MuiPaper-elevation4"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-18 MuiToolbar-gutters"
            >
              <span
                class="sc-bdfBwQ dYepCs"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root makeStyles-icon-19"
                  focusable="false"
                  title=""
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
                <h2
                  class="sc-gsTCUz"
                >
                  Members
                </h2>
              </span>
            </div>
          </header>
          <div
            class="sc-fFubgz ghXXhE"
          >
            <div
              class="sc-bkzZxe crFZJA"
            >
              <div
                class="sc-fodVxV bTOHvL"
                font-weight="bold"
                width="500px"
              >
                Name
              </div>
            </div>
          </div>
          <div
            class="sc-hBEYos iGMYou"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-20"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Become Player
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-21 Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Become Viewer
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bqyKva jIjuOx"
    >
      <div
        class="sc-kstrdz hxmCxE"
      >
        <header
          class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-appBar-1 MuiPaper-elevation4"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-2 MuiToolbar-gutters"
          >
            <span
              class="sc-bdfBwQ dYepCs"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-icon-3"
                focusable="false"
                title=""
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"
                />
              </svg>
              <h2
                class="sc-gsTCUz"
              >
                Options
              </h2>
            </span>
          </div>
        </header>
        <div
          class="sc-fFubgz ghXXhE"
        >
          <div
            class="sc-bkzZxe crFZJA"
          >
            <div
              class="sc-fodVxV bTNXAg"
              font-weight="bold"
              width="200px"
            >
              Keeped Pieces
            </div>
            <div
              class="sc-fodVxV kNAxDT"
            >
              <span
                class="MuiSwitch-root"
              >
                <span
                  aria-disabled="true"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-disabled-6 Mui-disabled Mui-disabled Mui-disabled"
                  tabindex="-1"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-7 MuiSwitch-input"
                      disabled=""
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
            </div>
          </div>
          <div
            class="sc-bkzZxe crFZJA"
          >
            <div
              class="sc-fodVxV bTNXAg"
              font-weight="bold"
              width="200px"
            >
              Invisibility
            </div>
            <div
              class="sc-fodVxV kNAxDT"
            >
              <span
                class="MuiSwitch-root"
              >
                <span
                  aria-disabled="true"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-disabled-6 Mui-disabled Mui-disabled Mui-disabled"
                  tabindex="-1"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-7 MuiSwitch-input"
                      disabled=""
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
            </div>
          </div>
          <div
            class="sc-bkzZxe crFZJA"
          >
            <div
              class="sc-fodVxV bTNXAg"
              font-weight="bold"
              width="200px"
            >
              Gravity
            </div>
            <div
              class="sc-fodVxV kNAxDT"
            >
              <span
                class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider-8 Mui-disabled"
              >
                <span
                  class="MuiSlider-rail"
                />
                <span
                  class="MuiSlider-track"
                  style="left: 0%; width: 0%;"
                />
                <input
                  type="hidden"
                  value="0.5"
                />
                <span
                  class="MuiSlider-mark MuiSlider-markActive"
                  data-index="0"
                  style="left: 0%;"
                />
                <span
                  class="MuiSlider-mark"
                  data-index="1"
                  style="left: 33.333333333333336%;"
                />
                <span
                  class="MuiSlider-mark"
                  data-index="2"
                  style="left: 66.66666666666667%;"
                />
                <span
                  class="MuiSlider-mark"
                  data-index="3"
                  style="left: 100%;"
                />
                <span
                  aria-orientation="horizontal"
                  aria-valuemax="2"
                  aria-valuemin="0.5"
                  aria-valuenow="0.5"
                  class="MuiSlider-thumb MuiSlider-thumbColorPrimary Mui-disabled PrivateValueLabel-thumb-9"
                  data-index="0"
                  role="slider"
                  style="left: 0%;"
                >
                  <span
                    class="PrivateValueLabel-offset-11 MuiSlider-valueLabel"
                  >
                    <span
                      class="PrivateValueLabel-circle-12"
                    >
                      <span
                        class="PrivateValueLabel-label-13"
                      >
                        0.5
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
          <div
            class="sc-bkzZxe crFZJA"
          >
            <div
              class="sc-fodVxV bTNXAg"
              font-weight="bold"
              width="200px"
            >
              Max Number of Players
            </div>
            <div
              class="sc-fodVxV kNAxDT"
            >
              <span
                class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider-14 Mui-disabled"
              >
                <span
                  class="MuiSlider-rail"
                />
                <span
                  class="MuiSlider-track"
                  style="left: 0%; width: 0%;"
                />
                <input
                  type="hidden"
                  value="1"
                />
                <span
                  class="MuiSlider-mark MuiSlider-markActive"
                  data-index="0"
                  style="left: 0%;"
                />
                <span
                  class="MuiSlider-mark"
                  data-index="1"
                  style="left: 33.333333333333336%;"
                />
                <span
                  class="MuiSlider-mark"
                  data-index="2"
                  style="left: 66.66666666666667%;"
                />
                <span
                  class="MuiSlider-mark"
                  data-index="3"
                  style="left: 100%;"
                />
                <span
                  aria-orientation="horizontal"
                  aria-valuemax="4"
                  aria-valuemin="1"
                  aria-valuenow="1"
                  class="MuiSlider-thumb MuiSlider-thumbColorPrimary Mui-disabled PrivateValueLabel-thumb-9"
                  data-index="0"
                  role="slider"
                  style="left: 0%;"
                >
                  <span
                    class="PrivateValueLabel-offset-11 MuiSlider-valueLabel"
                  >
                    <span
                      class="PrivateValueLabel-circle-12"
                    >
                      <span
                        class="PrivateValueLabel-label-13"
                      >
                        1
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-hBEYos iGMYou"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-15"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Leave
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-16 Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Start
            </span>
          </button>
        </div>
      </div>
      <div
        class="sc-kstrdz hxmCxE"
      >
        <header
          class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-appBar-17 MuiPaper-elevation4"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-18 MuiToolbar-gutters"
          >
            <span
              class="sc-bdfBwQ dYepCs"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-icon-19"
                focusable="false"
                title=""
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                />
              </svg>
              <h2
                class="sc-gsTCUz"
              >
                Members
              </h2>
            </span>
          </div>
        </header>
        <div
          class="sc-fFubgz ghXXhE"
        >
          <div
            class="sc-bkzZxe crFZJA"
          >
            <div
              class="sc-fodVxV bTOHvL"
              font-weight="bold"
              width="500px"
            >
              Name
            </div>
          </div>
        </div>
        <div
          class="sc-hBEYos iGMYou"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-20"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Become Player
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-21 Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Become Viewer
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Lobby Filled Render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bqyKva jIjuOx"
      >
        <div
          class="sc-kstrdz hxmCxE"
        >
          <header
            class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-appBar-22 MuiPaper-elevation4"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-23 MuiToolbar-gutters"
            >
              <span
                class="sc-bdfBwQ dYepCs"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root makeStyles-icon-24"
                  focusable="false"
                  title=""
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"
                  />
                </svg>
                <h2
                  class="sc-gsTCUz"
                >
                  Options
                </h2>
              </span>
            </div>
          </header>
          <div
            class="sc-fFubgz ghXXhE"
          >
            <div
              class="sc-bkzZxe crFZJA"
            >
              <div
                class="sc-fodVxV bTNXAg"
                font-weight="bold"
                width="200px"
              >
                Keeped Pieces
              </div>
              <div
                class="sc-fodVxV kNAxDT"
              >
                <span
                  class="MuiSwitch-root"
                >
                  <span
                    aria-disabled="true"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-25 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-disabled-27 Mui-disabled Mui-disabled Mui-disabled"
                    tabindex="-1"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-28 MuiSwitch-input"
                        disabled=""
                        type="checkbox"
                        value=""
                      />
                      <span
                        class="MuiSwitch-thumb"
                      />
                    </span>
                  </span>
                  <span
                    class="MuiSwitch-track"
                  />
                </span>
              </div>
            </div>
            <div
              class="sc-bkzZxe crFZJA"
            >
              <div
                class="sc-fodVxV bTNXAg"
                font-weight="bold"
                width="200px"
              >
                Invisibility
              </div>
              <div
                class="sc-fodVxV kNAxDT"
              >
                <span
                  class="MuiSwitch-root"
                >
                  <span
                    aria-disabled="true"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-25 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-disabled-27 Mui-disabled Mui-disabled Mui-disabled"
                    tabindex="-1"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-28 MuiSwitch-input"
                        disabled=""
                        type="checkbox"
                        value=""
                      />
                      <span
                        class="MuiSwitch-thumb"
                      />
                    </span>
                  </span>
                  <span
                    class="MuiSwitch-track"
                  />
                </span>
              </div>
            </div>
            <div
              class="sc-bkzZxe crFZJA"
            >
              <div
                class="sc-fodVxV bTNXAg"
                font-weight="bold"
                width="200px"
              >
                Gravity
              </div>
              <div
                class="sc-fodVxV kNAxDT"
              >
                <span
                  class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider-29 Mui-disabled"
                >
                  <span
                    class="MuiSlider-rail"
                  />
                  <span
                    class="MuiSlider-track"
                    style="left: 0%; width: 0%;"
                  />
                  <input
                    type="hidden"
                    value="0.5"
                  />
                  <span
                    class="MuiSlider-mark MuiSlider-markActive"
                    data-index="0"
                    style="left: 0%;"
                  />
                  <span
                    class="MuiSlider-mark"
                    data-index="1"
                    style="left: 33.333333333333336%;"
                  />
                  <span
                    class="MuiSlider-mark"
                    data-index="2"
                    style="left: 66.66666666666667%;"
                  />
                  <span
                    class="MuiSlider-mark"
                    data-index="3"
                    style="left: 100%;"
                  />
                  <span
                    aria-orientation="horizontal"
                    aria-valuemax="2"
                    aria-valuemin="0.5"
                    aria-valuenow="0.5"
                    class="MuiSlider-thumb MuiSlider-thumbColorPrimary Mui-disabled PrivateValueLabel-thumb-30"
                    data-index="0"
                    role="slider"
                    style="left: 0%;"
                  >
                    <span
                      class="PrivateValueLabel-offset-32 MuiSlider-valueLabel"
                    >
                      <span
                        class="PrivateValueLabel-circle-33"
                      >
                        <span
                          class="PrivateValueLabel-label-34"
                        >
                          0.5
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="sc-bkzZxe crFZJA"
            >
              <div
                class="sc-fodVxV bTNXAg"
                font-weight="bold"
                width="200px"
              >
                Max Number of Players
              </div>
              <div
                class="sc-fodVxV kNAxDT"
              >
                <span
                  class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider-35 Mui-disabled"
                >
                  <span
                    class="MuiSlider-rail"
                  />
                  <span
                    class="MuiSlider-track"
                    style="left: 0%; width: 0%;"
                  />
                  <input
                    type="hidden"
                    value="1"
                  />
                  <span
                    class="MuiSlider-mark MuiSlider-markActive"
                    data-index="0"
                    style="left: 0%;"
                  />
                  <span
                    class="MuiSlider-mark"
                    data-index="1"
                    style="left: 33.333333333333336%;"
                  />
                  <span
                    class="MuiSlider-mark"
                    data-index="2"
                    style="left: 66.66666666666667%;"
                  />
                  <span
                    class="MuiSlider-mark"
                    data-index="3"
                    style="left: 100%;"
                  />
                  <span
                    aria-orientation="horizontal"
                    aria-valuemax="4"
                    aria-valuemin="1"
                    aria-valuenow="1"
                    class="MuiSlider-thumb MuiSlider-thumbColorPrimary Mui-disabled PrivateValueLabel-thumb-30"
                    data-index="0"
                    role="slider"
                    style="left: 0%;"
                  >
                    <span
                      class="PrivateValueLabel-offset-32 MuiSlider-valueLabel"
                    >
                      <span
                        class="PrivateValueLabel-circle-33"
                      >
                        <span
                          class="PrivateValueLabel-label-34"
                        >
                          1
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-hBEYos iGMYou"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-36"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Leave
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-37 Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Start
              </span>
            </button>
          </div>
        </div>
        <div
          class="sc-kstrdz hxmCxE"
        >
          <header
            class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-appBar-38 MuiPaper-elevation4"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-39 MuiToolbar-gutters"
            >
              <span
                class="sc-bdfBwQ dYepCs"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root makeStyles-icon-40"
                  focusable="false"
                  title=""
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
                <h2
                  class="sc-gsTCUz"
                >
                  Members
                </h2>
              </span>
            </div>
          </header>
          <div
            class="sc-fFubgz ghXXhE"
          >
            <div
              class="sc-bkzZxe crFZJA"
            >
              <div
                class="sc-fodVxV bTOHvL"
                font-weight="bold"
                width="500px"
              >
                Name
              </div>
            </div>
            <div
              class="sc-bkzZxe crFZJA"
            >
              <div
                class="sc-fodVxV kNAxDT"
              />
              <div
                class="sc-fodVxV kNAxDT"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root makeStyles-icon-41"
                  focusable="false"
                  title="Viewer"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root makeStyles-icon-42"
                  focusable="false"
                  title="Non Admin"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="sc-hBEYos iGMYou"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-43"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Become Player
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-44 Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Become Viewer
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bqyKva jIjuOx"
    >
      <div
        class="sc-kstrdz hxmCxE"
      >
        <header
          class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-appBar-22 MuiPaper-elevation4"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-23 MuiToolbar-gutters"
          >
            <span
              class="sc-bdfBwQ dYepCs"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-icon-24"
                focusable="false"
                title=""
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"
                />
              </svg>
              <h2
                class="sc-gsTCUz"
              >
                Options
              </h2>
            </span>
          </div>
        </header>
        <div
          class="sc-fFubgz ghXXhE"
        >
          <div
            class="sc-bkzZxe crFZJA"
          >
            <div
              class="sc-fodVxV bTNXAg"
              font-weight="bold"
              width="200px"
            >
              Keeped Pieces
            </div>
            <div
              class="sc-fodVxV kNAxDT"
            >
              <span
                class="MuiSwitch-root"
              >
                <span
                  aria-disabled="true"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-25 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-disabled-27 Mui-disabled Mui-disabled Mui-disabled"
                  tabindex="-1"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-28 MuiSwitch-input"
                      disabled=""
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
            </div>
          </div>
          <div
            class="sc-bkzZxe crFZJA"
          >
            <div
              class="sc-fodVxV bTNXAg"
              font-weight="bold"
              width="200px"
            >
              Invisibility
            </div>
            <div
              class="sc-fodVxV kNAxDT"
            >
              <span
                class="MuiSwitch-root"
              >
                <span
                  aria-disabled="true"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-25 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-disabled-27 Mui-disabled Mui-disabled Mui-disabled"
                  tabindex="-1"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-28 MuiSwitch-input"
                      disabled=""
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
            </div>
          </div>
          <div
            class="sc-bkzZxe crFZJA"
          >
            <div
              class="sc-fodVxV bTNXAg"
              font-weight="bold"
              width="200px"
            >
              Gravity
            </div>
            <div
              class="sc-fodVxV kNAxDT"
            >
              <span
                class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider-29 Mui-disabled"
              >
                <span
                  class="MuiSlider-rail"
                />
                <span
                  class="MuiSlider-track"
                  style="left: 0%; width: 0%;"
                />
                <input
                  type="hidden"
                  value="0.5"
                />
                <span
                  class="MuiSlider-mark MuiSlider-markActive"
                  data-index="0"
                  style="left: 0%;"
                />
                <span
                  class="MuiSlider-mark"
                  data-index="1"
                  style="left: 33.333333333333336%;"
                />
                <span
                  class="MuiSlider-mark"
                  data-index="2"
                  style="left: 66.66666666666667%;"
                />
                <span
                  class="MuiSlider-mark"
                  data-index="3"
                  style="left: 100%;"
                />
                <span
                  aria-orientation="horizontal"
                  aria-valuemax="2"
                  aria-valuemin="0.5"
                  aria-valuenow="0.5"
                  class="MuiSlider-thumb MuiSlider-thumbColorPrimary Mui-disabled PrivateValueLabel-thumb-30"
                  data-index="0"
                  role="slider"
                  style="left: 0%;"
                >
                  <span
                    class="PrivateValueLabel-offset-32 MuiSlider-valueLabel"
                  >
                    <span
                      class="PrivateValueLabel-circle-33"
                    >
                      <span
                        class="PrivateValueLabel-label-34"
                      >
                        0.5
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
          <div
            class="sc-bkzZxe crFZJA"
          >
            <div
              class="sc-fodVxV bTNXAg"
              font-weight="bold"
              width="200px"
            >
              Max Number of Players
            </div>
            <div
              class="sc-fodVxV kNAxDT"
            >
              <span
                class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider-35 Mui-disabled"
              >
                <span
                  class="MuiSlider-rail"
                />
                <span
                  class="MuiSlider-track"
                  style="left: 0%; width: 0%;"
                />
                <input
                  type="hidden"
                  value="1"
                />
                <span
                  class="MuiSlider-mark MuiSlider-markActive"
                  data-index="0"
                  style="left: 0%;"
                />
                <span
                  class="MuiSlider-mark"
                  data-index="1"
                  style="left: 33.333333333333336%;"
                />
                <span
                  class="MuiSlider-mark"
                  data-index="2"
                  style="left: 66.66666666666667%;"
                />
                <span
                  class="MuiSlider-mark"
                  data-index="3"
                  style="left: 100%;"
                />
                <span
                  aria-orientation="horizontal"
                  aria-valuemax="4"
                  aria-valuemin="1"
                  aria-valuenow="1"
                  class="MuiSlider-thumb MuiSlider-thumbColorPrimary Mui-disabled PrivateValueLabel-thumb-30"
                  data-index="0"
                  role="slider"
                  style="left: 0%;"
                >
                  <span
                    class="PrivateValueLabel-offset-32 MuiSlider-valueLabel"
                  >
                    <span
                      class="PrivateValueLabel-circle-33"
                    >
                      <span
                        class="PrivateValueLabel-label-34"
                      >
                        1
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-hBEYos iGMYou"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-36"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Leave
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-37 Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Start
            </span>
          </button>
        </div>
      </div>
      <div
        class="sc-kstrdz hxmCxE"
      >
        <header
          class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-appBar-38 MuiPaper-elevation4"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-39 MuiToolbar-gutters"
          >
            <span
              class="sc-bdfBwQ dYepCs"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-icon-40"
                focusable="false"
                title=""
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                />
              </svg>
              <h2
                class="sc-gsTCUz"
              >
                Members
              </h2>
            </span>
          </div>
        </header>
        <div
          class="sc-fFubgz ghXXhE"
        >
          <div
            class="sc-bkzZxe crFZJA"
          >
            <div
              class="sc-fodVxV bTOHvL"
              font-weight="bold"
              width="500px"
            >
              Name
            </div>
          </div>
          <div
            class="sc-bkzZxe crFZJA"
          >
            <div
              class="sc-fodVxV kNAxDT"
            />
            <div
              class="sc-fodVxV kNAxDT"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-icon-41"
                focusable="false"
                title="Viewer"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-icon-42"
                focusable="false"
                title="Non Admin"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="sc-hBEYos iGMYou"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-43"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Become Player
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-44 Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Become Viewer
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
